tests/invalid/Template_Invalid_21.whiley
method f<T>(T x) -> (bool y):
    return false

property g(int x) -> (bool r):
    f(x)
